Rep get methods doc finished
