# src/dto/CharOutDto.php
@@ -31,8 +31,7 @@ final class CharOutDto
     /**
      * @OA\Property(
      *      description="Тип характеристики. Используется для вычисления типа переменной, в которой себе хранит характеристика",
-     *      type="string",
-     *      enum={"string", "fk", "int", "float", "boolean", "array"}
+     *     ref="#/components/schemas/DataTypeEnum"
      * )
      * @Groups({"repCharValues"})
      */
